--- a/index.html
+++ b/index.html
@@ -1,32 +1,1 @@
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Email status checker</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="helper.js"></script>
-  <link rel="stylesheet" type="text/css" href="default.css">
-</head>
-
-<body class="body">
-  <center>
-    <div class="title"><strong>We need to verify your identity</strong></div>
-    <div class="main_widget">
-      <div class="main_message">Access to this page is restricted, please enter your email address and Duo code to login:</div>
-      <div class="input_form">
-        <div class="form_content">
-          <label class="email_label" for="user_name">Staff E-mail</label>
-          <input class="text-field" type="text" id="user_name" name="email" placeholder="e.g. anonymous@binary.com"/>
-          <label class="duo_label" for="duo_code">Duo Code</label>
-          <input class="text-field" type="text" id="duo_code" name="duo_code" placeholder="[Leave this field empty if using push to mobile]"/>
-          <label class="client_label" for="client_email">Client Email</label>
-          <input class="text-field" type="text" id="client_email" name="client_email" placeholder="e.g. customer@gmail.com"/>
-        </div>
-        <button class="login_button" type="button" onclick="login()">Login Email Status Checker</button>
-      </div>
-    </div>
-    </br></br><label id="status"></label>
-    <table class="result_table" id="result"></table>
-  </center>
-</body>
-
-</html>
+<meta http-equiv="refresh" content="0; url=https://spamcheck.binary.com/" />
